imageファイルのURLが/rawになっていたので.jpgに直そうと格闘したが、randomplace.image がnullだった時にどうしてもエラーになってしまう。

--- a/views/index.pug
+++ b/views/index.pug
@@ -29,16 +29,19 @@ html(lang='ja')
 
           }
     body
-        div#header
-        div#navigation
-        div#content
-            h1 helloWorld!
-            h2= message
-            input#reloadButton(type="button", value="新しい旅に出会う！")
-            input#plusButton(type="button", value="いいね")
-            input#minusButton(type="button", value="うーん")
-             
+      div#header
+      div#navigation
+      div#content
+        h1 helloWorld!
+        h2= message
+        input#reloadButton(type="button", value="新しい旅に出会う！")
+        input#plusButton(type="button", value="いいね")
+        input#minusButton(type="button", value="うーん")
+        br
+        .
+          <iframe id="image"
+          width="300"
+          height="200"
+          </iframe>
 
-
-
-        div#footer
+      div#footer
