--- a/views/index.pug
+++ b/views/index.pug
@@ -37,11 +37,7 @@ html(lang='ja')
         input#reloadButton(type="button", value="新しい旅に出会う！")
         input#plusButton(type="button", value="いいね")
         input#minusButton(type="button", value="うーん")
-        br
-        .
-          <iframe id="image"
-          width="300"
-          height="200"
-          </iframe>
+        h1.p_image
+          img(src="https://gyazo.com/5a25ed63df0d9d05b8576e09870c0f39.jpg")
 
       div#footer
